fix css that didnt work in safari

--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -24,7 +24,7 @@ Home
     font-size: 13px;
     display: none;
   }
-    *:hover > .action {
+    h2:hover .action, h3:hover .action {
       display: inline-block;
     }
   h2 { font-size: 115%; font-weight: bold; margin: 1em 0; }
