change h1 on project listing page from Assessments to My Assessments

--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -65,7 +65,7 @@ Home
   <a id="new-assessment" href="/assessment-catalog" class="btn btn-success"><i class="glyphicon glyphicon-list-alt"></i> New Assessment</a>
 </div>
 
-<h1>Assessments</h1>
+<h1>My Assessments</h1>
 
 {% if folders|length == 0 %}
   <p>Start by beginning your first assessment.</p>
