Use alt-list glyphicon for New Assessment

--- a/templates/project_list.html
+++ b/templates/project_list.html
@@ -62,7 +62,7 @@ Home
 {% block body %}
 <div style="float: right; margin-top: 1em">
   <a id="new-folder" href="#" class="btn btn-default" onclick="new_folder(); return false;"><i class="glyphicon glyphicon-folder-open"></i> New Folder</a>
-  <a id="new-assessment" href="/assessment-catalog" class="btn btn-success"><i class="glyphicon glyphicon-play"></i> Start Assessment</a>
+  <a id="new-assessment" href="/assessment-catalog" class="btn btn-success"><i class="glyphicon glyphicon-list-alt"></i> New Assessment</a>
 </div>
 
 <h1>Assessments</h1>
