Apply focus-area style to assessments boxes

--- a/templates/assessment-catalog.html
+++ b/templates/assessment-catalog.html
@@ -7,17 +7,19 @@ Assessment Catalog
 {% block head %}
 <style>
 .assessment {
-  margin-bottom: 16px;
-  border: 1px solid #88A;
-  border-radius: 8px;
-  padding: 16px;
-  cursor: pointer;
+  border: 1px solid #D0D0D0;
+  border-top: 4px solid #88A;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 2px 3px rgba(0, 0, 0, .2);
+  padding: 1.5em;
+  background-color: white;
+  margin-bottom: 24px;
+  height: 210px;
 }
   .assessment h2 {
     margin: -16px -16px 0 -16px;
     padding: 16px;
-    background-color: #88A;
-    color: white;
+    /*background-color: #88A;
+    color: white;*/
     font-size: 120%;
     font-weight: bold;
   }
